--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Anna Bella Oficial</title>
 		<meta charset="utf-8">
-
-		<link rel="stylesheet" type="text/css" href="estilo.css">
+                
+		<link rel="stylesheet" type="text/css" href="https://github.com/Fabianaju/pagina-webdesign-simples-/blob/main/estilo.css">
 		
 	</head>
 
