--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Anna Bella Oficial</title>
 		<meta charset="utf-8">
                 
-		<link rel="stylesheet" type="text/css" href="https://github.com/Fabianaju/pagina-webdesign-simples-/blob/main/estilo.css">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 		
 	</head>
 
