--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Anna Bella Oficial</title>
 		<meta charset="utf-8">
-                
+
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		
 	</head>
@@ -12,7 +12,7 @@
 
 		<div id="principal">
 			
-			<img src="capa.jpg">
+			<img src="imagens/capa.jpg">
 
 			<div id="menu">
 				
